--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "installCommand": "npm install --force",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "rewrites": [
     {
       "source": "/(.*)",
