--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^6.22.0",
     "zustand": "^4.5.0"
+
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
@@ -29,6 +30,7 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+     "rollup": "^4.21.0"
   }
 }
