--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.0",
-     "rollup": "^4.21.0"
+     "rollup": "^4.21.0",
+      "@rollup/rollup-linux-x64-gnu": "^4.21.0"
   }
 }
